docs/v1.3.0/en/api/mission-ext/MissionFormationTargetSelectionHandler.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `MissionFormationTargetSelectionHandler`
- [← Area / Back to mission-ext](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# MissionFormationTargetSelectionHandler

**Namespace:** TaleWorlds.MountAndBlade.View.MissionViews
**Module:** TaleWorlds.MountAndBlade
**Type:** `public class MissionFormationTargetSelectionHandler : MissionView`
**Base:** `MissionView`
**File:** `TaleWorlds.MountAndBlade.View/TaleWorlds/MountAndBlade/View/MissionViews/MissionFormationTargetSelectionHandler.cs`

## Overview

`MissionFormationTargetSelectionHandler` is a handler used to run agreed response logic when a specific event occurs.

## Mental Model

Treat `MissionFormationTargetSelectionHandler` as a Handler-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Methods

### OnPreDisplayMissionTick
`public override void OnPreDisplayMissionTick(float dt)`

**Purpose:** Called when the `pre display mission tick` event is raised.

### OnRemoveBehavior
`public override void OnRemoveBehavior()`

**Purpose:** Called when the `remove behavior` event is raised.

### TickDebug
`public void TickDebug()`

**Purpose:** Handles logic related to `tick debug`.

## Usage Example

```csharp
Mission.Current.AddMissionBehavior(new MissionFormationTargetSelectionHandler());
```

## See Also

- [Complete Class Catalog](../catalog)